src/pages/ru/v1.19.0/sdk/start.mdx
---
title: "JavaScript SDK - метод 'start'"
metaTitle: "JavaScript SDK - метод 'start'"
metaDescription: "Подробности о методе 'start' из SDK OpenReplay"
---

Этот метод используется для запуска трекера. При запуске трекера начинается запись сессии.

## Сигнатура

```js
start(startOpts?: Partial<StartOptions>): Promise<StartPromiseReturn>
```

### Параметры
Метод `start` принимает необязательный параметр, с помощью которого вы можете настроить различные аспекты записи:
- `userID: string`: используется для ручной установки ID пользователя, чтобы отслеживать его между сессиями. Это строковое значение, и оно может быть любым.
- `metadata: Record<string, string>`: ручная установка значений метаданных. Подробнее об этой возможности см. в [разделе Metadata](/installation/metadata/).
- `forceNew: boolean`: используется для принудительного создания новой сессии после обновления страницы. По умолчанию установлено значение `false`, поэтому после обновления сессия сохраняется.
- `sessionToken: string`: используется в некоторых интеграциях.
- `assistOnly: boolean`: запускает трекер в режиме только ассистирования, при котором отправка данных сессии на бэкенд будет пропущена (функция редакции EE)

### Возвращаемое значение

После запуска метод вернёт промис с объектом информации о сессии, содержащим:
- `sessionID: string`: Строковое значение, представляющее ID запущенной сессии.
Запускает трекер (и процесс записи), затем возвращает промис с информацией о сессии (sessionID, sessionToken, userUUID).


